--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:targetSdkVersion="19"/>
     <uses-permission android:name="android.permission.NFC"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="ScanActivity"
+        <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -14,7 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name="OverviewActivity"
-                  android:parentActivityName="ScanActivity" >
+                  android:parentActivityName="MainActivity" >
         </activity>
     </application>
 </manifest>
