Initial payload functionality

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,5 +14,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="PayloadActivity">
+            <intent-filter>
+              <action android:name="android.intent.action.VIEW" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.BROWSABLE" />
+              <data android:scheme="http" android:host="nfc.dangerousthings.com" android:pathPrefix="/payload/" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
