--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,17 @@ repositories {
 dependencies {
     compile project(':NearField')
     compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile 'commons-codec:commons-codec:1.5'
 }
 
 android {
     compileSdkVersion 'android-19'
     buildToolsVersion '20.0.0'
+
+    packagingOptions {
+        pickFirst 'META-INF/LICENSE.txt'
+        pickFirst 'META-INF/NOTICE.txt'
+    }
 
     signingConfigs {
         release {
@@ -39,6 +45,11 @@ android {
 
     defaultConfig {
         minSdkVersion 10
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     sourceSets {
