--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,29 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.android.tools.build:gradle:2.0.0-alpha9'
     }
 }
 apply plugin: 'android'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 dependencies {
     compile project(':NearField')
-    compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-codec:commons-codec:1.5'
 }
 
 android {
-    compileSdkVersion 'android-19'
-    buildToolsVersion '20.0.0'
-
-    packagingOptions {
-        pickFirst 'META-INF/LICENSE.txt'
-        pickFirst 'META-INF/NOTICE.txt'
-    }
+    compileSdkVersion 'android-23'
+    buildToolsVersion '23.0.2'
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFile getDefaultProguardFile('proguard-android.txt')
         }
     }
