--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile project(':NearField')
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-codec:commons-codec:1.3'
+    provided files('libs/XposedBridgeApi-20150213.jar')
 }
 
 android {
